Mon Apr  6 15:11:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (int_chr): checsk overflow.

Mon Apr  6 10:49:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/stringio/test_stringio.rb (test_path): StringIO#path is no
	  longer defined.  [ruby-dev:38254]

Mon Apr  6 10:47:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_path): removed.  [ruby-dev:38254]

Sun Apr  5 18:02:54 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_fd_resize): does nothing on Win32.

Sat Apr  4 17:05:15 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (RB_NUM_COERCE_FUNCS_NEED_OPID): macro to
	  check compatibility.  [ruby-dev:38162]

Sat Apr  4 07:38:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb (sitearch): default to arch.

Fri Apr  3 14:02:42 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/irb/completion.rb (IRB::InputCompletor::Operators): Add
	  overloadable negative operators.

	* lib/irb/ruby-lex.rb (RubyLex#lex_init): Support overloadable
	  negative operators.

	* lib/irb/ruby-lex.rb (RubyLex#identify_identifier): Minus signs
	  need to be escaped in regexp character class.

	* misc/ruby-mode.el (ruby-font-lock-keywords, ruby-parse-partial):
	  Support overloadable negative operators.

Fri Apr  3 12:45:55 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: quotes arguments with spaces always.

Thu Apr  2 14:50:06 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/getoptlong.rb: remove unused udoc/usage from example.
	   [ruby-core:23098]

Thu Apr  2 07:42:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (config.h): updated.

Wed Apr  1 20:37:49 2009  Tanaka Akira  <akr@fsij.org>

	* configure.in (rb_cv_fork_with_pthread): fail if the child process
	  fail.

Wed Apr  1 19:46:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): support for parallel make.  a