@@ -1,3 +1,8 @@
+Mon Apr  6 16:38:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* file.c (sys_fail2, rb_file_s_readlink, BUFCHECK, rmext),
+	  (rb_file_s_basename): get rid of overflow.
+
 Mon Apr  6 15:11:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* numeric.c (int_chr): checsk overflow.
